--- a/.github/workflows/ngrok.yml
+++ b/.github/workflows/ngrok.yml
@@ -1,17 +1,13 @@
-name: Ngrok Tunnel
+name: Ngrok HTML Server
 
-on:
-  workflow_dispatch: # bisa manual jalanin
-  push: # atau otomatis pas push
-    branches:
-      - main
+on: 
+  workflow_dispatch:   # bisa kamu jalankan manual dari tab Actions
 
 jobs:
-  expose:
+  serve:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Install ngrok
         run: |
@@ -19,17 +15,24 @@ jobs:
           echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
           sudo apt update && sudo apt install ngrok -y
 
-      - name: Start web server (contoh di port 8080)
+      - name: Start HTML server
         run: |
+          # kalau ada index.html di repo, bakal ke-serve di port 8080
           nohup python3 -m http.server 8080 &
 
       - name: Run ngrok tunnel
         run: |
           ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
           nohup ngrok http 8080 --log=stdout > ngrok.log &
-          sleep 5
+          sleep 10
           cat ngrok.log | grep -o "https://[0-9a-zA-Z.-]*.ngrok-free.app" | head -n1 > ngrok_url.txt
-          echo "URL publik: $(cat ngrok_url.txt)"
+          echo "🚀 Public URL: $(cat ngrok_url.txt)"
 
-      - name: Output URL
-        run: cat ngrok_url.txt
+      - name: Save Ngrok URL to artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: ngrok-link
+          path: ngrok_url.txt
+
+      - name: Keep workflow alive (24 jam)
+        run: sleep 86400
